kuber-homeworks/2.3/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: app-pod
  ports:
    - name: nginx-container
      protocol: TCP
      port: 80
      targetPort: 80
    - name: multitool-container
      protocol: TCP
      port: 1180
      targetPort: 1180
